--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "README.md"
   ],
   "devDependencies": {
+    "@types/paho-mqtt": "^1.0.10",
     "@types/react": "~18.2.45",
-    "typescript": "~5.3.3",
-    "mqtt": "^5.11.0",
+    "paho-mqtt": "^1.1.0",
     "react-native": "^0.74.0",
-    "react-native-webrtc": "^124.0.5"
+    "react-native-webrtc": "^124.0.5",
+    "typescript": "~5.3.3"
   },
   "peerDependencies": {
-    "mqtt": "^5.11.0",
+    "paho-mqtt": "^1.1.0",
     "react-native": ">=0.74.0",
     "react-native-webrtc": "^124.0.5"
   },
@@ -51,7 +52,7 @@
     "react-native-webrtc": {
       "optional": false
     },
-    "mqtt": {
+    "paho-mqtt": {
       "optional": false
     }
   }
