--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf build",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "proto:generate": "mkdirp src/proto && protoc -I ./external/protocol/protos --ts_proto_out=src/proto --ts_proto_opt=forceDefaultExports=true,esModuleInterop=true,outputJsonMethods=false,outputClientImpl=false,importSuffix=.js,useProtobufjs=true ./external/protocol/protos/*.proto",
+    "proto:clean": "rimraf src/proto",
+    "proto:build": "npm run proto:clean && npm run proto:generate"
   },
   "keywords": [
     "raspberry",
@@ -31,13 +34,19 @@
     "LICENSE",
     "README.md"
   ],
+  "dependencies": {
+    "protobufjs": "^8.0.0"
+  },
   "devDependencies": {
     "@types/paho-mqtt": "^1.0.10",
     "@types/react": "~18.2.45",
+    "mkdirp": "^3.0.1",
     "paho-mqtt": "^1.1.0",
-    "react-native": "^0.74.0",
-    "react-native-webrtc": "^124.0.5",
-    "typescript": "~5.3.3"
+    "react-native": "^0.74.7",
+    "react-native-webrtc": "^124.0.7",
+    "rimraf": "^6.0.1",
+    "ts-proto": "^1.181.2",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "paho-mqtt": "^1.1.0",
