--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "es2023",
     "module": "CommonJS",
     "declaration": true,
     "jsx": "react-native",
